# software-engineering

./: .gitignore  docker-compose.yml  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yaml
1-python/: 1.1-variables_assignments.md  1.2-booleans.md  1.3.2-float.md  1.3.2-temperatures.py  7-comprehensions.md  7-people.py  index.md
3-general-programming/: index.md
4-web_development/: index.md
5-databases/: index.md
7-infraestructure/: index.md
8-ds-and-ml/: index.md
docs/: index.md
docs/en/: index.md  operational-path.md
docs/es/: .pages  001-operational-path.md  index.md  operational-path.md  professional-path.md  recommended-paths.md  role-based-path.md
docs/es/003-programming/001-linux/: index.md
docs/es/004-python/: index.md
docs/es/004-python/001-introduction/: 001-history.md  002-ecosystem.md  003-versions.md  004-install-config.md  005-package-mgmt.md  006-projects-envs.md  007-runtime-repl.md  008-tools-ides.md
docs/es/005-javascript-typescript/: index.md
docs/es/005-javascript-typescript/001-introduction/: 001-history.md  002-ecosystem.md  003-versions.md  004-install-config.md  005-package-mgmt.md  006-projects-envs.md  007-runtime-repl.md  008-tools-ides.md
docs/es/005-python/: index.md
docs/es/006-rust/: index.md
docs/es/006-sql/: index.md
docs/es/007-computing-systems/: index.md
docs/es/007-shell/: index.md
docs/es/008-rust/: index.md
docs/es/009-dart/: index.md
docs/es/010-elixir/: index.md
overrides/assets/javascripts/: katex-init.js
overrides/assets/stylesheets/: lists.css  tables.css
(+65 files in other folders)
