[project]
name = "software-engineering"
description = "Add your description here"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-kroki-plugin>=0.9.0",
    "mkdocs-material>=9.6.22",
    "mkdocs-static-i18n",
    "mkdocs-with-pdf>=0.9.3",
    "mkdocs>=1.6.1",
    "vexy-mkdocs-strip-number-prefix==1.0.11",
]

[tool.uv.sources]
mkdocs-static-i18n = { git = "https://github.com/uselessscat/mkdocs-static-i18n.git" }
