[project]
name = "software-engineering"
description = "Add your description here"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-kroki-plugin>=0.9.0",
    "mkdocs-material>=9.6.22",
    "mkdocs-pagetree-plugin>=0.0.17",
    "mkdocs-static-i18n",
    "mkdocs-with-pdf>=0.9.3",
    "mkdocs>=1.6.1",
    "vexy-mkdocs-strip-number-prefix==1.0.11",
]

[tool.uv.sources]
mkdocs-static-i18n = { git = "https://github.com/uselessscat/mkdocs-static-i18n.git" }
